syntax = "proto3";

option go_package = "github.com/skip-mev/slinky/x/oracle/types";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

// CurrencyPair is the standard representation of a pair of assets, where one
// (Base) is priced in terms of the other (Quote)
message CurrencyPair {
  string Base = 1;
  string Quote = 2;
}

// QuotePrice is the representation of the aggregated prices for a CurrencyPair,
// where price represents the price of Base in terms of Quote
message QuotePrice {
  string price = 1 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  // BlockTimestamp tracks the block height associated with this price update.
  // We include block timestamp alongside the price to ensure that smart
  // contracts and applications are not utilizing stale oracle prices
  google.protobuf.Timestamp block_timestamp = 2
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];

  // BlockHeight is height of block mentioned above
  uint64 block_height = 3;
}

// TickerGenesis is the information necessary for initialization of a Ticker,
// both a CurrencyPair + QuotePrice object is required
message CurrencyPairGenesis {
  CurrencyPair currency_pair = 1;
  QuotePrice currency_pair_price = 2 [ (gogoproto.nullable) = true ];
}

// GenesisState is the genesis-state for the x/oracle module, it takes a set of
// predefined CurrencyPairs + prices
message GenesisState { repeated CurrencyPairGenesis currency_pair_genesis = 1; }
